--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@radix-ui/react-label": "^2.1.7",
     "@tailwindcss/vite": "^4.1.11",
+    "@tanstack/react-query": "^5.82.0",
+    "aos": "^2.3.4",
     "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -21,8 +23,10 @@
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-router": "^7.6.3",
     "react-spinners": "^0.17.0",
+    "swiper": "^11.2.10",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11"
   },
